--- a/react-final/src/App.css
+++ b/react-final/src/App.css
@@ -66,3 +66,11 @@ img.small{
   border: 1px solid gray;
   margin-right: 10px;
 }
+
+img.large{
+  width: 300px;
+  margin-left: 10px;
+  margin-top: 10px;
+  border: 1px solid gray;
+}
+
